# [PROJECT_DIR]/Cargo.toml
[workspace]
members = ["jero"]
resolver = "3"

[workspace.package]
authors = ["LMA1980"]
description = "Zero-Nil incubator."

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

