[package]
name = "neuron_rs"
version = "0.1.0"
edition = "2024"
authors.workspace = true
description.workspace = true

[dependencies]
uuid = { version = "1.21.0", features = ["sha1", "std", "v8", "zerocopy"] }

[dev-dependencies]
criterion = "0.5"
uuid = { version = "1.21.0", features = ["sha1", "std", "v8", "zerocopy"] }

[[bench]]
name = "minimal_neuron_builder_bench"
harness = false

[[example]]
name = "minimal_neuron"
